--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -7,6 +7,9 @@
   "private": true,
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "build": "node --es-module-specifier-resolution=node server.js"
+  },
   "dependencies": {
     "@lit-labs/ssr": "^1.0.0-rc.2",
     "@microsoft/fast-components": "^2.7.2",
