--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -15,6 +15,8 @@
     "@microsoft/fast-components": "^2.7.2",
     "@microsoft/fast-element": "^1.5.0",
     "@microsoft/fast-foundation": "^2.8.0",
+    "lit": "^2.0.0-rc.3",
+    "lit-element": "^2.5.1",
     "lodash-es": "4.17.15",
     "tslib": "^1.11.1"
   },
