--- a/examples/ssr/tsconfig.json
+++ b/examples/ssr/tsconfig.json
@@ -7,22 +7,16 @@
     "importHelpers": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
     "noEmitOnError": true,
     "skipLibCheck": true,
     "preserveConstEnums": true,
     "stripInternal": true,
     "strict": true,
-    "outDir": "dist/build",
-    "rootDir": "src",
+    "rootDir": "./",
+    "outDir": "./dist",
     "lib": [
       "dom",
       "esnext"
     ]
-  },
-  "include": [
-    "src"
-  ]
+  }
 }
