--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -18,6 +18,8 @@
     "@microsoft/fast-components": "^2.7.2",
     "@microsoft/fast-element": "^1.5.0",
     "@microsoft/fast-foundation": "^2.8.0",
+    "@types/express": "^4.17.13",
+    "express": "^4.17.1",
     "happy-dom": "^2.22.0",
     "lit": "^2.0.0-rc.3",
     "lit-element": "^2.5.1",
