implement mechanism to get shadowRoot and implement jsDOM instead of happy-dom

--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -20,7 +20,9 @@
     "@microsoft/fast-foundation": "^2.8.0",
     "@types/express": "^4.17.13",
     "express": "^4.17.1",
+    "global-jsdom": "^8.2.0",
     "happy-dom": "^2.22.0",
+    "jsdom": "^17.0.0",
     "lit": "^2.0.0-rc.3",
     "lit-element": "^2.5.1",
     "lodash-es": "4.17.15",
