--- a/packages/utilities/fast-eslint-rules/package.json
+++ b/packages/utilities/fast-eslint-rules/package.json
@@ -22,11 +22,10 @@
   "main": ".eslintrc.js",
   "homepage": "https://github.com/Microsoft/fast-eslint-rules#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-react": "^7.19.0",
-    "typescript": "^3.9.0"
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-import": "^2.25.0",
+    "typescript": "~3.9.0 || ~4.3.5"
   }
 }
