--- a/sites/fast-color-explorer/package.json
+++ b/sites/fast-color-explorer/package.json
@@ -42,6 +42,7 @@
     "css-loader": "^4.2.1",
     "csstype": "^2.5.8",
     "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-react": "^7.19.0",
     "exenv-es6": "^1.0.0",
     "focus-visible": "^4.1.5",
     "html-webpack-plugin": "^3.2.0",
