--- a/sites/fast-component-explorer/package.json
+++ b/sites/fast-component-explorer/package.json
@@ -51,6 +51,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-react": "^7.19.0",
     "exenv-es6": "^1.0.0",
     "file-loader": "^6.0.0",
     "focus-visible": "^4.1.5",
