temporary allow major version for eslint package
add js file override to eslint config (#5310)

* add js file override to eslint config

* deduplicate lockfile

--- a/packages/utilities/fast-eslint-rules/package.json
+++ b/packages/utilities/fast-eslint-rules/package.json
@@ -21,6 +21,9 @@
   },
   "main": ".eslintrc.js",
   "homepage": "https://github.com/Microsoft/fast-eslint-rules#readme",
+  "beachball": {
+    "disallowedChangeTypes": []
+  },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
