migrate lib to src for consistency

--- a/packages/utilities/fast-animation/package.json
+++ b/packages/utilities/fast-animation/package.json
@@ -16,8 +16,11 @@
   },
   "main": "dist/esm/index.js",
   "types": "dist/fast-animation.d.ts",
+  "unpkg": "dist/fast-animation.min.js",
   "scripts": {
-    "build": "tsc -p ./tsconfig.json && yarn doc",
+    "build": "yarn build:tsc && yarn build:rollup && yarn doc",
+    "build:rollup": "rollup -c",
+    "build:tsc": "tsc -p ./tsconfig.json",
     "build:app": "webpack --mode=production",
     "coverage": "jest --coverage",
     "doc": "api-extractor run --local",
@@ -96,6 +99,10 @@
     "react-dom": "^16.3.0",
     "react-router": "^4.1.1",
     "require-dir": "^0.3.2",
+    "rollup": "^2.7.6",
+    "rollup-plugin-filesize": "^8.0.2",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-typescript2": "^0.27.0",
     "style-loader": "^0.13.2",
     "ts-jest": "^25.4.0",
     "typescript": "^3.9.0",
