--- a/packages/utilities/fast-animation/package.json
+++ b/packages/utilities/fast-animation/package.json
@@ -15,17 +15,18 @@
     "url": "https://github.com/Microsoft/fast/issues/new/choose"
   },
   "main": "dist/esm/index.js",
-  "types": "dist/fast-animation.d.ts",
+  "types": "dist/esm/index.d.ts",
   "unpkg": "dist/fast-animation.min.js",
   "scripts": {
     "build": "yarn build:tsc && yarn build:rollup && yarn doc",
     "build:rollup": "rollup -c",
     "build:tsc": "tsc -p ./tsconfig.json",
     "build:app": "webpack --mode=production",
+    "clean:dist": "node ../../../build/clean.js dist",
     "coverage": "jest --coverage",
     "doc": "api-extractor run --local",
     "doc:ci": "api-extractor run",
-    "prepare": "yarn build",
+    "prepare": "yarn clean:dist && yarn build",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.{ts,tsx,html}\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.{ts,tsx,html}\" --list-different",
     "start": "node_modules/.bin/webpack-dev-server --progress",
