temporarily allow change types for major versions

--- a/packages/utilities/fast-animation/package.json
+++ b/packages/utilities/fast-animation/package.json
@@ -36,6 +36,9 @@
     "unit-tests": "jest --runInBand",
     "watch": "yarn build -- -w --preserveWatchOutput"
   },
+  "beachball": {
+    "disallowedChangeTypes": []
+  },
   "jest": {
     "collectCoverage": true,
     "coverageReporters": [
